# Projeto_Grupo_CB

./: .gitignore  docker-compose.yml  start-dev.bat
.claude/: settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed.py  seed_bulk.py  seed_data.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_schema_updates.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: admin.py  auth.py  cliente.py  fornecedor.py  lojas.py  pedidos.py  produtos.py  vendedor.py
backend/app/api/schemas/: auth.py  cliente.py  common.py  fornecedor.py  pedido.py  produto.py  vendedor.py
backend/app/domain/admin/: entities.py  events.py  interfaces.py
backend/app/domain/admin/use_cases/: aprovar_fornecedor.py  moderar_produto.py
backend/app/domain/cliente/: entities.py  interfaces.py
backend/app/domain/cliente/use_cases/: criar_cliente.py
backend/app/domain/fornecedor/: entities.py  events.py  interfaces.py
backend/app/domain/fornecedor/use_cases/: atualizar_estoque.py  cadastrar_produto.py  criar_fornecedor.py
backend/app/domain/shared/catalogo/: entities.py  interfaces.py
backend/app/domain/shared/estoque/: entities.py  interfaces.py
backend/app/domain/shared/pedidos/: entities.py  interfaces.py
backend/app/domain/vendedor/: entities.py  events.py  interfaces.py
backend/app/infrastructure/database/: base.py  session.py
backend/app/infrastructure/security/: jwt.py  password.py
backend/app/tasks/: celery_app.py  email_tasks.py  sync_tasks.py
(+106 files in other folders)
