[project]
name = "marketplace-cb-backend"
version = "0.1.0"
description = "Marketplace CB - Backend API (B2B2C Dropshipping Platform)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
